[project]
name = "irp-meta-learning"
version = "0.1.0"
description = "Meta-learning optimisation strategies for full-waveform inversion"
authors = [
{ name = "Francesco Remondi" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"jax",
"jaxlib",
"numpy",
"scipy",
"matplotlib"
]

[project.optional-dependencies]
dev = [
"black",
"ruff",
"pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# -------------------------

# Black (formatter)

# -------------------------

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

# -------------------------

# Ruff (linter)

# -------------------------

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.li]()
